k8s-manifests/gateway/frontend-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend-route
  namespace: frontend
  labels:
    app.kubernetes.io/component: gateway
spec:
  parentRefs:
    - name: fanvault-gateway
      namespace: backend
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: frontend
          namespace: frontend
          port: 80
