k8s-manifests/gateway/product-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: product-route
  namespace: backend
  labels:
    app.kubernetes.io/component: gateway
spec:
  parentRefs:
    - name: fanvault-gateway
      namespace: backend
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/products
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: product-service
          namespace: backend
          port: 3003
