k8s-manifests/gateway/user-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: user-route
  namespace: backend
  labels:
    app.kubernetes.io/component: gateway
spec:
  parentRefs:
    - name: fanvault-gateway
      namespace: backend
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/users
      # filters:
      #   - type: URLRewrite
      #     urlRewrite:
      #       path:
      #         type: ReplacePrefixMatch
      #         replacePrefixMatch: /
      backendRefs:
        - name: user-service
          namespace: backend
          port: 3002
